compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__records__record_accessor_multiple_variants_multiple_positions-2.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub type Person {\n    Teacher(title: String, age: Int, name: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
import { CustomType } from "../gleam.mjs";

export class Teacher extends CustomType {
  constructor(title, age, name) {
    super();
    this.title = title;
    this.age = age;
    this.name = name;
  }
}

export class Student extends CustomType {
  constructor(name, age) {
    super();
    this.name = name;
    this.age = age;
  }
}

export function get_name(person) {
  return person.name;
}

export function get_age(person) {
  return person.age;
}

